log
Fri Apr 18 15:52:59 -04 2025: 
 hashmap.c | 74 +++++++++++++++++++++++++++++++++++++++++++--------------------
 1 file changed, 51 insertions(+), 23 deletions(-)
 tests:  4|5
total_score: 20/70
eeef3b7
Fri Apr 18 16:13:33 -04 2025: 
 hashmap.c | 32 ++++++++++++++++++++++++++------
 1 file changed, 26 insertions(+), 6 deletions(-)
Compilation failed
In file included from test.c:4:
./hashmap.c:82:9: error: void function 'enlarge' should not return a value [-Wreturn-type]
        return EXIT_FAILURE;
        ^      ~~~~~~~~~~~~
1 error generated.
8171855
Fri Apr 18 16:13:48 -04 2025: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
6aaf441
Fri Apr 18 16:16:33 -04 2025: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
09a4dc3
Fri Apr 18 16:18:50 -04 2025: 
 hashmap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
4a56fdf
